# simplecrm

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  FIXES_TASK.md  MANAGER_TASK.md  POLISH_PASS_FOLLOWUPS.md  QA_REPORT.md  README.md  RESUME.md  WORK_LOG.md  comgate_integration.md  docker-compose.dev.yml  docker-compose.prod.yml  fix-docker.sh  package.json  pnpm-lock.yaml
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260417_2149_initial_empty_baseline_6c57c6890dde.py  20260417_2158_phase1_foundation_org_user_team_plan_c98b20a997d0.py  20260417_2226_phase2_companies_and_ownership_history_eae6d56b0854.py  20260418_0842_phase2_contacts_3a06ad7bed4c.py  20260418_0846_phase2_pipelines_and_stages_396feead22c3.py  20260418_0849_phase2_deals_597c44f5ac56.py  20260418_0852_phase2_activities_94077b6331b7.py  20260429_1441_phase3_refresh_tokens_allowlist_d4eeb0570c57.py  20260430_1200_phase4_org_show_leaderboard_3c63455f1e8b.py  20260430_1500_phase5_invitations_default_team_can_invite_8a1d4c7e9f02.py  20260502_0700_paygate_b1_subscription_billing_b3a5d27e1c84.py  20260502_0900_paygate_b2_activity_subscription_a917e4d6f221.py  20260502_1500_org_ownership_window_days_e4b81f9c2d10.py  20260502_1600_subscription_seats_and_pending_f72c81a3b9e2.py  20260502_1700_subscription_pending_user_deactivations_a8c93f1d6b40.py  20260502_1900_user_reports_dashboard_config_d2c45f8e1a3b.py  20260503_1700_comgate_billing_c4f9e2a18b67.py  20260509_0900_email_password_auth_f0b01efb64c6.py  20260509_2030_invoicing_foundation_165882b6092b.py  20260509_2120_billing_settings_issuer_fields_1a5b9f76b1ee.py  20260512_2100_org_billing_name_b3d9c1e4a572.py  20260513_1200_deal_payment_status_e7a2cd91f405.py  20260513_1300_user_max_owned_companies_a814b0ce67f3.py  20260513_1400_blocked_companies_d92c4a51e80b.py  20260514_1200_company_main_contact_ed34f716656f.py  20260515_1500_org_billing_info_reminder_sent_at_a1f2c3d4e5b6.py  20260517_2100_company_email_b7c1d2e3f4a5.py  20260517_2300_user_preferences_c1d2e3f4a5b6.py  20260518_2200_super_admin_audit_log_d2e3f4a5b6c7.py  20260518_2230_organization_deleted_at_e3f4a5b6c7d8.py  20260520_1000_company_phone_industry_f4a5b6c7d8e9.py  20260608_1200_organization_billing_kind_a5b6c7d8e9f0.py  20260612_0900_calendar_events_google_connections_825199d7e150.py  20260615_1157_user_smtp_settings_ebd46b27f894.py  20260615_1201_email_campaigns_acc079a4c30e.py  20260704_1900_annual_price_996_d1e2f3a4b5c6.py  20260708_1930_activity_company_id_and_types_a7c1f0b2d3e4.py  20260708_2000_sent_emails_b8d2e1f3a4c5.py  20260712_1941_user_language_b936c7a9df14.py  20260712_2023_billing_settings_en_templates_12d3a3862222.py  (+1 more)
backend/app/: main.py
backend/app/api/v1/: __init__.py  activities.py  admin.py  admin_invoices.py  auth.py  blocked_companies.py  bulk_email.py  companies.py  contacts.py  data_export.py  deals.py  emails.py  events.py  feedback.py  google_calendar.py  health.py  home_dashboard.py  imports.py  invitations.py  invoices.py  onboarding.py  organizations.py  payments.py  pipelines.py  plans.py  reports.py  reports_widgets.py  subscription.py  teams.py  user_smtp.py  users.py
backend/app/core/: auth_tokens.py  config.py  csv_safety.py  deps.py  i18n.py  passwords.py  scoping.py  security.py  token_crypto.py
backend/app/db/: __init__.py  session.py
backend/app/db/models/: __init__.py  activity.py  auth_action_token.py  billing_settings.py  blocked_company.py  calendar_event.py  charge.py  company.py  contact.py  deal.py  email_campaign.py  enums.py  google_calendar_connection.py  invitation.py  invoice.py  invoice_audit_log.py  invoice_counter.py  invoice_line.py  organization.py  ownership_history.py  payment_method.py  pipeline.py  plan.py  refresh_token.py  sent_email.py  stage.py  subscription.py  super_admin_audit.py  team.py  user.py  user_smtp_settings.py  webhook_event.py
backend/app/locales/cs/: emails.json  invoice.json
backend/app/locales/en/: emails.json  invoice.json
backend/app/schemas/: activity.py  admin_invoicing.py  auth.py  billing.py  blocked_company.py  bulk_email.py  calendar_event.py  company.py  contact.py  deal.py  errors.py  feedback.py  google_calendar.py  home_dashboard.py  imports.py  invitation.py  invoicing.py  organization.py  pagination.py  payments.py  pipeline.py  registry.py  reports.py  sent_email.py  team.py  user.py  user_preferences.py  user_smtp.py
backend/app/schemas/reports/: __init__.py  dashboard.py  legacy.py  responses.py
backend/app/services/: activity_log.py  auth.py  billing.py  bulk_email.py  business_registry.py  comgate.py  email.py  email_auth.py  freeing.py  google_calendar.py  google_oauth.py  home_dashboard.py  invitations.py  lookup_cache.py  mailer.py  onboarding.py  org_billing.py  org_erasure.py  pipeline.py  scheduler.py  super_admin_audit.py
backend/app/services/imports/: __init__.py  csv_reader.py  mapping.py  matcher.py  owners.py  runner.py
backend/scripts/: seed_demo_org.py  test_email_invoice_flow.py
backend/tests/: conftest.py  test_config.py
backend/tests/core/: test_csv_safety.py  test_i18n.py
backend/tests/db/: test_models_email_campaign.py  test_models_phase1.py  test_models_phase2.py  test_models_user_smtp.py
backend/tests/integration/: test_invoicing_happy_path.py
backend/tests/services/: test_ares_client.py  test_auth_service.py  test_billing.py  test_billing_info_reminder_sweep.py  test_billing_manual_payment.py  test_billing_proration.py  test_bulk_email.py  test_comgate.py  test_email_sender_routing.py  test_email_smtp_config.py  test_email_templates.py  test_freeing_job.py  test_google_calendar.py  test_imports_csv_reader.py  test_imports_matcher.py  test_imports_owners.py  test_invoicing_exporter.py  test_invoicing_integrity.py  test_invoicing_models.py  test_invoicing_renderer.py  test_invoicing_scheduler.py  test_invoicing_service.py  test_invoicing_storage.py  test_org_billing.py  test_overdue_invoice_sweep.py  test_permissions.py  test_pipeline.py  test_scheduler.py  test_scoping.py
docs/: ERD.md  (+12 more)
(+551 files in other folders)
