[project]
name = "simplecrm-backend"
version = "0.1.0"
description = "SimpleCRM FastAPI backend"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "greenlet>=3.1",
    "authlib>=1.3",
    "python-jose[cryptography]>=3.3",
    "itsdangerous>=2.2",
    "passlib[bcrypt]>=1.7",
    # passlib 1.7.x calls bcrypt.hashpw(...) during backend probe with a 73-byte
    # secret; bcrypt 5.x raises ValueError instead of silently truncating, which
    # breaks the probe. Pin to 4.x until passlib ships a fix.
    "bcrypt>=4.0,<5",
    # Tax-invoice rendering pipeline (commit #3 of INVOICES_TASK.md).
    # WeasyPrint version is pinned narrowly because PDF byte-output isn't
    # contractually stable across feature releases — bumping minor versions
    # can change byte layout even when the rendered page is visually
    # identical, which would invalidate stored pdf_sha256 values.
    "weasyprint>=63.0,<64",
    # SPAYD QR-code (CZ "QR Platba") generator. Pure-Python, MIT.
    "qrplatba>=1.0",
    # Czech locale-aware number/date formatting in the PDF template.
    "babel>=2.16",
    # ISDOC XML emission. lxml is faster + more rigorous than xml.etree
    # and is already pulled in by WeasyPrint, so we depend on it explicitly.
    "lxml>=5.3",
    # Jinja2 for the invoice HTML template + email body templates.
    "jinja2>=3.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
    "asgi-lifespan>=2.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "S",    # flake8-bandit
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "E501",  # line length handled by formatter
]
# Multiplication sign, en dash, and minus sign appear deliberately in math
# docstrings/comments (price formulas, proration math) and Czech pricing
# strings ("50 – 80 Kč"). Allow them so RUF001/002/003 stop flagging them.
allowed-confusables = ["×", "–", "−"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI and SQLAlchemy idioms use function calls in parameter defaults.
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.Query",
    "fastapi.Path",
    "fastapi.Body",
    "fastapi.Header",
    "fastapi.Cookie",
    "fastapi.File",
    "fastapi.Form",
    "fastapi.Security",
    "app.core.deps.require_role",
    "app.core.deps.require_roles",
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "S101",  # asserts are fine in tests
    "S105",  # hardcoded password literals in test setup are fine
    "S106",  # hardcoded passwords in tests are fine
]
"alembic/versions/*.py" = [
    "N999",  # generated filenames have custom slug templates
]
"app/db/models/*.py" = [
    "N811",  # SQLAlchemy class aliases (e.g. UUID as PgUUID) aren't constants
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_decorators = false  # FastAPI/pytest decorators are typed-ok
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = [
    "jose", "jose.*",
    "authlib", "authlib.*",
    "passlib", "passlib.*",
    "weasyprint", "weasyprint.*",
    "qrplatba", "qrplatba.*",
    "lxml", "lxml.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::ResourceWarning",
]

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true
